# al_total_data_challenge

./: .gitignore  README.md  pyproject.toml
al_total_data_challenge/: feature_engineering_on_pivoted_data.py  featureengineering.py  readrawdata.py  regressors.py  split.py  ts_split_predict.py  utilities.py
al_total_data_challenge_last_submit_ugly_code/al_total_data_challenge/al_total_data_challenge/: pyproject.toml
al_total_data_challenge_last_submit_ugly_code/al_total_data_challenge/al_total_data_challenge/refactor/: 1.py  2.all.hordelta.py  2.all.lgbm.py  2.all.py  2.lgbm.py  2.otherfeatures.py  2.power.py  2.py  2.quant.py  2.some.one.py  2.some.three.py  3.py  submit.csv
al_total_data_challenge_last_submit_ugly_code/al_total_data_challenge/al_total_data_challenge/refactor/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
al_total_data_challenge_last_submit_ugly_code/al_total_data_challenge/al_total_data_challenge/refactor/catboost_info/learn/: events.out.tfevents
al_total_data_challenge_last_submit_ugly_code/al_total_data_challenge/al_total_data_challenge/refactor/package/: SqrtSquareCBRegressor.py  feature_engineering_on_pivoted_data.py  featureengineering.py  readrawdata.py  split.py  ts_split_predict.py  utilities.py
scripts/: 1.py  2_all_farms.py  2_single_farm.py  3.py
scripts/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
scripts/catboost_info/learn/: events.out.tfevents
(+1 files in other folders)
