[tool.poetry]
name = "al_total_data_challenge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.2"
sklearn = "^0.0"
catboost = "^0.26.1"
seaborn = "^0.11.2"
pandas = "^1.3.3"
scipy = "^1.7.1"
pyarrow = "^5.0.0"
spyder-kernels = "2.0.5"
fastparquet = "^0.7.1"
lightgbm = "^3.2.1"

[tool.poetry.dev-dependencies]
sklearn = "^0.0"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
